# langchain-study

app/: .gitignore  config.tmp.py  helper.py  pyproject.toml
app/cases/: 00_quick_start.ipynb  01_vectorstores.ipynb  01_vectorstores_zh.ipynb  02_system_message.ipynb  03_vectorstores_metadata.ipynb  04_distance_metrics.ipynb
app/modules/: user.json  zh_news.txt
